[package]
name = "ip_scanner_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
ipnetwork = "0.20"
rand = "0.8"
futures = "0.3"
chrono = "0.4"
anyhow = "1.0"
async-trait = "0.1"
